tests/snapshots/sfc/ts/script_setup__definemodel_with_name.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 150
expression: ts_output
---
import { useModel as _useModel } from 'vue'
import { defineComponent as _defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, withDirectives as _withDirectives, vModelText as _vModelText } from "vue"


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  props: {
    "title": {},
    "titleModifiers": {}
  },
  emits: ["update:title"],
  setup(__props) {

const title = _useModel(__props, "title")

return (_ctx: any,_cache: any) => {
  return _withDirectives((_openBlock(), _createElementBlock("input", {
      "onUpdate:modelValue": _cache[0] || (_cache[0] = ($event: any) => ((title).value = $event))
    }, null, 512 /* NEED_PATCH */)), [ [_vModelText, title.value] ])
}
}

})
