tests/snapshots/sfc/ts/script_setup__definemodel_with_options.snap
---
source: crates/vue_compiler_sfc/src/snapshot_tests.rs
assertion_line: 98
expression: ts_output
---
import { useModel as _useModel } from 'vue'
import { defineComponent, PropType } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, withDirectives as _withDirectives, unref as _unref, vModelText as _vModelText } from "vue"


export default defineComponent({
  name: 'test',
  props: {
    modelValue: { type: Number, default: 0 },
  },
  emits: ["update:modelValue"],
  setup(__props) {

const count = _useModel(__props, "modelValue")

return (_ctx, _cache) => {
  return _withDirectives((_openBlock(), _createElementBlock("input", { "onUpdate:modelValue": $event => ((_unref(count)) = $event), type: "number" }, null, 8 /* PROPS */, ["onUpdate:modelValue"])), [ [_vModelText, _unref(count)] ])
}
}

})
