tests/snapshots/sfc/ts/script_setup__defineoptions.snap
---
source: crates/vue_compiler_sfc/src/snapshot_tests.rs
assertion_line: 98
expression: ts_output
---
import { defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"


export default /*@__PURE__*/Object.assign({
  name: 'MyComponent',
  inheritAttrs: false
}, {
  name: 'test',
  setup(__props) {


return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("div", null, "Component"))
}
}

})
