tests/snapshots/sfc/ts/script_setup__defineprops_array_syntax_with_destructure_defaults.snap
---
source: crates/vue_compiler_sfc/src/snapshot_tests.rs
assertion_line: 98
expression: ts_output
---
import { mergeDefaults as _mergeDefaults } from 'vue'
import { defineComponent, PropType } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString } from "vue"


export default defineComponent({
  name: 'test',
  props: /*@__PURE__*/_mergeDefaults(['msg', 'count'], {
  msg: 'hello',
  count: 0
}),
  setup(__props) {


return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(__props.msg) + " " + _toDisplayString(__props.count), 1 /* TEXT */))
}
}

})
