tests/snapshots/sfc/ts/script_setup__defineslots.snap
---
source: crates/vue_compiler_sfc/src/snapshot_tests.rs
assertion_line: 98
expression: ts_output
---
import { defineComponent } from 'vue'
import { renderSlot as _renderSlot } from "vue"


export default defineComponent({
  name: 'test',
  setup(__props) {


return (_ctx, _cache) => {
  return _renderSlot(_ctx.$slots, "default")
}
}

})
