tests/snapshots/sfc/ts/script_setup__function_declarations.snap
---
source: crates/vue_compiler_sfc/src/snapshot_tests.rs
assertion_line: 98
expression: ts_output
---
import { defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"


export default defineComponent({
  name: 'test',
  setup(__props) {

function increment() {
  count++
}
const handler = () => {}

return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("button", { onClick: increment }, "Click"))
}
}

})
