tests/snapshots/sfc/ts/script_setup__generic_component_basic.snap
---
source: crates/vue_compiler_sfc/src/snapshot_tests.rs
expression: ts_output
---
import { defineComponent, PropType } from 'vue'
import { Fragment as _Fragment, openBlock as _openBlock, createElementBlock as _createElementBlock, renderList as _renderList, toDisplayString as _toDisplayString } from "vue"


export default defineComponent({
  name: 'test',
  props: {
    items: { type: Array as PropType<T[]>, required: true },
    selected: { type: T as PropType<T>, required: true },
  },
  setup(__props) {


return (_ctx, _cache) => {
  return (_openBlock(true), _createElementBlock(_Fragment, null, _renderList(_ctx.items, (item) => { return (_openBlock(), _createElementBlock("div", { key: String(item) }, _toDisplayString(item), 1 /* TEXT */)) }), 128 /* KEYED_FRAGMENT */))
}
}

})
